force-app/main/default/objects/OrderLogAssociation__c/OrderLogAssociation__c.object-meta.xml
<CustomObject>
    <description>Associação entre Log de Integração e um pedido respectivo.</description>
    <label>Log do Pedido</label>
    <nameField>
        <displayFormat>ORDLOG-{0}</displayFormat>
        <label>Nome do Log do Pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs do Pedido</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>