force-app/main/default/objects/OrderLogAssociation__c/fields/IntegrationLog__c.field-meta.xml
<CustomField>
    <fullName>IntegrationLog__c</fullName>
    <label>Log de Integrações</label>
    <referenceTo>IntegrationLog__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>OrderAssociations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>