force-app/main/default/objects/OrderLogAssociation__c/listViews/All_records.listView-meta.xml
<ListView>
    <fullName>All_records</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>IntegrationLog__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All records</label>
</ListView>